[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gym>=0.26.2",
    "langchain>=0.3.25",
    "langchain-community<0.3.24",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.22",
    "langgraph>=0.4.8",
    "llama-index>=0.12.41",
    "numpy<2.0.0",
    "openai>=1.79.0",
    "stable-baselines3>=2.6.0",
]
